/*
 * $Id: ChangeLog,v 1.2457 2004/03/03 01:38:41 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-03 00:25 UTC-0300 Marcelo Lombardo <marcelo@xharbour.com.br>
  * include/hbset.h
  * include/set.ch
    + Added HB_SET_BGTASKPCODES to set up # of pCodes executed before
      check for Task execution (Only applies to ST applications)
  * source/rtl/set.c
    + Added support to HB_SET_BGTASKPCODES
    + Added set_numberul() to handle LONG SET Parameters
  * source/pptable.c
    + Added support to HB_SET_BGTASKPCODES
    ! Fixed HB_SET_TRIMFILENAME enum constant
    ! Fixed hb_pp_topCommand if not defined HB_COMPAT_C53
  * source/vm/hvm.c
    + Added support to HB_SET_BGTASKPCODES
  + tests/bkgtst2.prg
    + Added sample to demonstrate HB_SET_BGTASKPCODES

2004-03-02 17:37 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/regex.c
    + added int Wild2RegEx( char *sWild, char* sRegEx, BOOL bMatchCase )

  * source/rtl/strmatch.c
    + Implemnted TODO: hb_strMatchRegExp()

  * include/hbapifs.h
    + Added 5th parameter BOOL bMatchCase to hb_fsDirectoryCrawler()
  * source/rtl/direct.c
    + Added 5th parameter BOOL bMatchCase to hb_fsDirectoryCrawler()
    + Added support for 3rd parameter <lMatchCase> to HB_FUNC( DIRECTORYRECURSE )
    * Modified hb_fsDirectoryCrawler() to use new Wild2RegEx() and support bMatchCase argument.

2004-03-03 01:15 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/utils/hbtest/hbtest.prg
  * xharbour/utils/hbtest/rt_misc.prg
   * BAD file name are platform dependent now. * and ? can be use in file
     name on Linux
   * some small fixes for case sensitive FS to proper clean temporary files

2004-03-03 00:30 UTC+0100 Giancarlo Niccolai <gc [at] niccolai [dot] ws>
  * source/rtl/gtapi.c
    ! Close handler was not freed in hb_gtExit(), causing a leak warining.